Create post and list posts completed, everything about users is also complete

--- a/public/css/libs.css
+++ b/public/css/libs.css
@@ -8691,6 +8691,10 @@ table.dataTable thead .sorting:after {
 
 
 /****************User Profile  *********************/
+#admin-page{
+    padding-top: 0px;
+}
+
 .user-row {
     margin-bottom: 14px;
 }
