--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -2,6 +2,10 @@
 
 
 /****************User Profile  *********************/
+#admin-page{
+    padding-top: 0px;
+}
+
 .user-row {
     margin-bottom: 14px;
 }
